<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <!-- Sections -->

  <TextView
      android:id="@+id/billTextView"
      style="@style/SectionStyle"
      android:text="@string/section_bill_amount"
      app:layout_constraintBottom_toBottomOf="@+id/billEditText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/billEditText"/>

  <TextView
      android:id="@+id/tipTextView"
      style="@style/SectionStyle"
      android:text="@string/section_tip_percent"
      app:layout_constraintBottom_toBottomOf="@+id/tipEditText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tipEditText"/>

  <TextView
      android:id="@+id/partyTextView"
      style="@style/SectionStyle"
      android:text="@string/section_people_party"
      app:layout_constraintBottom_toBottomOf="@+id/partyEditText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/partyEditText"/>

  <!-- Input Fields -->

  <EditText
      android:id="@+id/billEditText"
      style="@style/InputStyle"
      android:hint="@string/hint_input_bill_amount"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <EditText
      android:id="@+id/tipEditText"
      style="@style/InputStyle"
      android:hint="@string/hint_input_tip_amount"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/billEditText"/>

  <EditText
      android:id="@+id/partyEditText"
      style="@style/InputStyle"
      android:hint="@string/hint_input_party_amount"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tipEditText"/>

  <!-- Result Sections -->

  <TextView
      android:id="@+id/resultsTextView"
      style="@style/SectionStyle"
      android:layout_marginTop="@dimen/result_top_margin"
      android:text="@string/result_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/partyEditText"/>

  <TextView
      android:id="@+id/totalTextView"
      style="@style/SectionStyle"
      android:layout_marginTop="@dimen/result_section_top_margin"
      android:text="@string/result_section_total"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/resultsTextView"/>

  <TextView
      android:id="@+id/perPersonTextView"
      style="@style/SectionStyle"
      android:layout_marginTop="@dimen/result_section_top_margin"
      android:text="@string/result_section_per_person"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/totalTextView"/>

  <!-- Result Values -->

  <TextView
      android:id="@+id/totalValueTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/empty_result"
      android:textColor="@color/colorBlack"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
      app:layout_constraintStart_toStartOf="@+id/perPersonValueTextView"
      app:layout_constraintTop_toTopOf="@+id/totalTextView"
      tools:text="$72.00"/>

  <TextView
      android:id="@+id/perPersonValueTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/section_horizontal_margin"
      android:text="@string/empty_result"
      android:textColor="@color/colorBlack"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/perPersonTextView"
      app:layout_constraintStart_toEndOf="@+id/perPersonTextView"
      app:layout_constraintTop_toTopOf="@+id/perPersonTextView"
      tools:text="$18.00"/>

  <!-- Calculate Button -->

  <Button
      android:id="@+id/calculateButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/calculate_button_horizontal_margin"
      android:layout_marginStart="@dimen/calculate_button_horizontal_margin"
      android:layout_marginTop="@dimen/calculate_button_top_margin"
      android:clickable="true"
      android:focusable="true"
      android:text="@string/calculate_result"
      android:textColor="@color/colorWhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/perPersonTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>